# rss-feed-tui

./: .gitignore  LICENSE  MANIFEST.in  PYPI_READY.md  README.md  index.py  palms.json  pyproject.toml  requirements.txt  setup.py.backup
rss-feed-tui/: app.py
rss-feed-tui/styles/: app.tcss
rsstui/: __init__.py  app.py  async_feed.py  default_discover.json
rsstui/styles/: app.tcss
src/: __init__.py  app.py  async_feed.py  default_discover.json
src/styles/: app.tcss
test_env/: pyvenv.cfg
test_install_env/: pyvenv.cfg
