[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rss-feed-tui"
version = "1.0.0"
description = "RSS feed TUI application built with Textual"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "whaiman"}
]
keywords = ["rss", "feed", "reader", "tui", "terminal", "textual", "news"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
    "Topic :: Terminals",
    "Environment :: Console :: Curses",
]
dependencies = [
    "textual>=0.41.0",
    "feedparser>=6.0.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "html2text>=2025.4.15",
]

[project.optional-dependencies]
dev = [
    "textual-dev>=1.0.0",
]

[project.scripts]
rss-feed-tui = "rss-feed-tui.app:main"

[project.urls]
Homepage = "https://github.com/whaiman/rss-feed-tui"
"Bug Reports" = "https://github.com/whaiman/rss-feed-tui/issues"
"Source" = "https://github.com/whaiman/rss-feed-tui"

[tool.setuptools.packages.find]
where = ["."]
include = ["rss-feed-tui*"]

[tool.setuptools.package-data]
rss-feed-tui = ["styles/*.tcss"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
# This tells setuptools to read from pyproject.toml